add line orientation option to options page

--- a/src/options.html
+++ b/src/options.html
@@ -882,6 +882,26 @@
               </div>
               <p class="text-neutral-500">enabling numberKeys -> makes it so that pressing 1 opens first bookmark, 2 opens second bookmark, and so on (0 activates the back button)</p>
             </div>
+            <div class="grid gap-2 text-base">
+              <p class="text-white">bookmarks.lineOrientation</p>
+              <div class="grid grid-cols-2 gap-2">
+                <button id="bookmarks-line-orientation-top-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">top</span>
+                </button>
+                <button id="bookmarks-line-orientation-bottom-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">bottom</span>
+                </button>
+                <button id="bookmarks-line-orientation-left-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">left</span>
+                </button>
+                <button id="bookmarks-line-orientation-right-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">right</span>
+                </button>
+                <button id="bookmarks-line-orientation-none-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">none</span>
+                </button>
+              </div>
+            </div>
           </div>
           <div id="bookmarks-user-defined-section">
             <div class="grid gap-2 text-base">
