--- a/src/options.html
+++ b/src/options.html
@@ -313,7 +313,7 @@
                   <p class="text-base text-neutral-500">live preview</p>
                   <div id="live-wallpaper-preview" class="grid aspect-video w-64 place-items-center overflow-hidden rounded-md bg-neutral-800"></div>
                   <p class="text-base text-neutral-500">
-                    tip: you can upload PNG, JPG, GIF, MP4 file formats & more<br />
+                    tip: you can upload PNG, JPG, WEBP, GIF, MP4 file formats & more<br />
                     it is recommended to scale images to match your resolution for faster loading times
                   </p>
                 </div>
