--- a/src/options.html
+++ b/src/options.html
@@ -319,6 +319,26 @@
                 </div>
               </div>
             </div>
+            <div class="grid gap-2">
+              <p class="text-base text-white">wallpaper.filters.brightness</p>
+              <div id="wallpaper-filters-brightness-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                <input
+                  id="wallpaper-filters-brightness-input"
+                  type="text"
+                  autocomplete="off"
+                  class="bg-transparent text-white placeholder-neutral-500 outline-none"
+                  placeholder="input brightness (0.0-1.0)..."
+                />
+              </div>
+            </div>
+            <div class="grid gap-2">
+              <p class="text-base text-white">wallpaper.filters.blur</p>
+              <div id="wallpaper-filters-blur-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                <input id="wallpaper-filters-blur-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input blur..." />
+              </div>
+            </div>
           </div>
         </section>
         <!-- ui -->
