--- a/src/options.html
+++ b/src/options.html
@@ -910,6 +910,19 @@
                 </button>
               </div>
             </div>
+            <div class="grid gap-2">
+              <p class="text-base text-white">bookmarks.defaultFolderIconType</p>
+              <div id="bookmarks-default-folder-icon-type-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
+                <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
+                <input
+                  id="bookmarks-default-folder-icon-type-input"
+                  type="text"
+                  autocomplete="off"
+                  class="bg-transparent text-white placeholder-neutral-500 outline-none"
+                  placeholder="input icon-type..."
+                />
+              </div>
+            </div>
           </div>
           <div id="bookmarks-user-defined-section">
             <div class="grid gap-2 text-base">
