start working on wallpaper collection type

--- a/src/options.html
+++ b/src/options.html
@@ -283,6 +283,9 @@
                 <button id="wallpaper-type-file-upload-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
                   <span class="text-white">fileUpload</span>
                 </button>
+                <button id="wallpaper-type-collection-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                  <span class="text-white">collection</span>
+                </button>
               </div>
             </div>
             <div class="grid">
