add collections section in options page

--- a/src/options.html
+++ b/src/options.html
@@ -321,6 +321,12 @@
                   </p>
                 </div>
               </div>
+              <div id="wallpaper-collection-section">
+                <div class="grid gap-2">
+                  <p class="text-base text-white">wallpaper.collections</p>
+                  <p class="text-base text-neutral-500">work in progress</p>
+                </div>
+              </div>
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">wallpaper.filters.brightness</p>
