add draggable wallpaper collections and more

--- a/src/options.html
+++ b/src/options.html
@@ -325,6 +325,26 @@
                 <div class="grid gap-2">
                   <p class="text-base text-white">wallpaper.collections</p>
                   <p class="text-base text-neutral-500">work in progress</p>
+                  <div id="wallpaper-collections-list" class="wallpaper-collections-dropzone grid grid-flow-row gap-2">
+                    <div class="draggable-item bg-neutral-800 p-2">
+                      <p>collection 1</p>
+                      <button class="wallpaper-collection-node-handle aspect-square w-10 cursor-pointer rounded-md bg-neutral-500 transition hover:bg-neutral-600">
+                        <i class="ri-draggable text-white"></i>
+                      </button>
+                    </div>
+                    <div class="draggable-item bg-neutral-800 p-2">
+                      <p>collection 2</p>
+                      <button class="wallpaper-collection-node-handle aspect-square w-10 cursor-pointer rounded-md bg-neutral-500 transition hover:bg-neutral-600">
+                        <i class="ri-draggable text-white"></i>
+                      </button>
+                    </div>
+                    <div class="draggable-item bg-neutral-800 p-2">
+                      <p>collection 3</p>
+                      <button class="wallpaper-collection-node-handle aspect-square w-10 cursor-pointer rounded-md bg-neutral-500 transition hover:bg-neutral-600">
+                        <i class="ri-draggable text-white"></i>
+                      </button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
