--- a/src/options.html
+++ b/src/options.html
@@ -1091,7 +1091,7 @@
       <div class="my-12 grid grid-flow-row place-items-center gap-4 py-4">
         <div class="grid w-full grid-flow-row place-items-center gap-4">
           <div id="bottom-of-page-sensor" class="w-full">
-            <div id="controls-container" class="fixed bottom-4 hidden rounded-md bg-neutral-900 p-4 drop-shadow transition-none">
+            <div id="controls-container" class="fixed bottom-4 rounded-md border-2 border-emerald-500 bg-neutral-900 p-4 drop-shadow transition-none">
               <div class="grid w-full grid-flow-row gap-2 lg:grid-cols-2">
                 <button id="save-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
                   <span class="text-base text-white">save (ctrl+s)</span>
