--- a/src/options.html
+++ b/src/options.html
@@ -1090,23 +1090,26 @@
       <!-- save buttons and more -->
       <div class="my-12 grid grid-flow-row place-items-center gap-4 py-4">
         <div class="grid w-full grid-flow-row place-items-center gap-4">
-          <div id="bottom-of-page-sensor" class="w-full">
-            <div id="controls-container" class="fixed bottom-4 rounded-md border-2 border-emerald-500 bg-neutral-900 p-4 drop-shadow transition-none">
-              <div class="grid w-full grid-flow-row gap-2 lg:grid-cols-2">
-                <button id="save-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
-                  <span class="text-base text-white">save (ctrl+s)</span>
-                </button>
-                <button id="config-utils-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
-                  <span class="text-base text-white">config-utils</span>
-                </button>
-                <button id="export-button" class="cursor-pointer rounded-md bg-indigo-500 p-2 transition hover:bg-indigo-600">
-                  <span class="text-base text-white">save & export</span>
-                </button>
-                <button id="import-button" class="cursor-pointer rounded-md bg-indigo-500 p-2 transition hover:bg-indigo-600">
-                  <span class="text-base text-white">import & save</span>
-                </button>
+          <div class="grid w-full grid-flow-row place-items-center">
+            <div id="controls-container-placeholder" class="w-full">
+              <div id="controls-container" class="fixed bottom-4 rounded-md border-2 border-emerald-500 bg-neutral-900 p-4 drop-shadow transition-none">
+                <div class="grid w-full grid-flow-row gap-2 lg:grid-cols-2">
+                  <button id="save-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
+                    <span class="text-base text-white">save (ctrl+s)</span>
+                  </button>
+                  <button id="config-utils-button" class="cursor-pointer rounded-md bg-emerald-500 p-2 transition hover:bg-emerald-600">
+                    <span class="text-base text-white">config-utils</span>
+                  </button>
+                  <button id="export-button" class="cursor-pointer rounded-md bg-indigo-500 p-2 transition hover:bg-indigo-600">
+                    <span class="text-base text-white">save & export</span>
+                  </button>
+                  <button id="import-button" class="cursor-pointer rounded-md bg-indigo-500 p-2 transition hover:bg-indigo-600">
+                    <span class="text-base text-white">import & save</span>
+                  </button>
+                </div>
               </div>
             </div>
+            <div id="bottom-of-page-sensor"></div>
           </div>
           <div class="grid w-full grid-flow-row place-items-center gap-4">
             <div class="grid w-full grid-cols-[1fr_max-content_1fr] gap-2">
