allow video file format for wallpaper url

--- a/src/options.html
+++ b/src/options.html
@@ -288,6 +288,7 @@
             <div class="grid">
               <div id="wallpaper-url-section">
                 <div class="grid gap-2">
+                  <p class="text-base text-neutral-500">tip: you can use video file formats like MP4, MOV & more</p>
                   <p class="text-base text-white">wallpaper.url</p>
                   <div id="wallpaper-url-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                     <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
