extract search results logic from bookmark search logic

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
             <span class="search-bookmark-icon-color select-none font-semibold">//&nbsp;</span>
             <input id="bookmark-search-input" type="text" autocomplete="off" class="font-bookmark-search placeholder-color-bookmark-search bg-transparent outline-none" />
           </div>
-          <div id="bookmarks-search-results-container" class="font-bookmark-search-results corner-style grid w-full grid-flow-row gap-2 p-2 text-base md:text-2xl" selected-index="0"></div>
+        </section>
+        <section id="search-results-section" class="hidden w-full">
+          <div id="search-results-container" class="font-search-results corner-style grid w-full grid-flow-row gap-2 p-2 text-base md:text-2xl" selected-index="0"></div>
         </section>
       </div>
     </div>
