improve search results button appearance

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
           </div>
         </section>
         <section id="search-results-section" class="hidden w-full">
-          <div id="search-results-container" class="font-search-results corner-style grid w-full grid-flow-row gap-2 p-2 text-base md:text-2xl" selected-index="0"></div>
+          <div id="search-results-container" class="font-search-results corner-style grid w-full grid-flow-row text-base md:text-2xl" selected-index="0"></div>
         </section>
       </div>
     </div>
