--- a/src/options.html
+++ b/src/options.html
@@ -610,6 +610,7 @@
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.searchIconColor</p>
+              <p class="text-base text-neutral-500">this changes the -> color</p>
               <div id="search-search-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                 <input id="search-search-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
@@ -617,6 +618,7 @@
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.bookmarkIconColor</p>
+              <p class="text-base text-neutral-500">this changes the // color</p>
               <div id="search-bookmark-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                 <input id="search-bookmark-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
@@ -624,6 +626,7 @@
             </div>
             <div class="grid gap-2">
               <p class="text-base text-white">search.selectIconColor</p>
+              <p class="text-base text-neutral-500">this changes the > color</p>
               <div id="search-select-icon-color-container" class="grid w-full grid-cols-[max-content_auto] rounded-md border-2 border-transparent bg-neutral-800 p-1 text-base">
                 <span class="select-none font-semibold text-pink-500">>&nbsp;</span>
                 <input id="search-select-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
