--- a/src/options.html
+++ b/src/options.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="shared/control.css" />
     <link rel="stylesheet" href="assets/icons/remixicon/remixicon.css" />
     <link rel="stylesheet" href="options/styles/index.css" />
+    <link rel="stylesheet" href="shared/sonner.css" />
     <script src="options/scripts/init.ts" type="module" defer></script>
+    <script src="options/scripts/utils/sonner.ts" type="module" defer></script>
     <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <title>options ヽ(・ω・*)</title>
   </head>
 
   <body dir="ltr" class="min-h-screen bg-neutral-900">
+    <div id="toaster-wrapper" data-rich-colors="true" data-expand="false" data-position="top-center"></div>
     <div class="mx-auto grid w-[95%] grid-flow-row sm:w-[80%] md:w-[60%] lg:w-[40%]">
       <div class="grid place-items-center gap-4 p-4">
         <img id="mtab-logo" src="./assets/icon.png" class="animate-up-bouncy aspect-square w-40" alt="logo" />
