add typerwriter title effect option

--- a/src/options.html
+++ b/src/options.html
@@ -109,6 +109,17 @@
             </div>
           </div>
           <div class="grid gap-2 text-base">
+            <p class="text-white">title.effect</p>
+            <div class="grid grid-cols-2 gap-2">
+              <button id="title-effect-none-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                <span class="text-white">none</span>
+              </button>
+              <button id="title-effect-typewriter-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
+                <span class="text-white">typewriter</span>
+              </button>
+            </div>
+          </div>
+          <div class="grid gap-2 text-base">
             <p class="text-white">title.faviconType</p>
             <div class="grid grid-cols-2 gap-2">
               <button id="title-favicon-type-default-button" class="rounded-md bg-neutral-800 py-2 outline-none hover:bg-neutral-700">
