improve recognize url function and add search input highlighting for recognized links and more

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <section id="search-section" class="grid w-full grid-flow-row place-items-center gap-2">
             <div id="search-container" class="font-search corner-style grid w-full grid-cols-[max-content_auto] border-2 border-transparent p-1 text-base opacity-0 md:p-2 md:text-2xl">
               <span class="search-search-icon-color select-none font-semibold">->&nbsp;</span>
-              <input id="search-input" type="text" autocomplete="off" class="font-search placeholder-color-search bg-transparent outline-none" />
+              <input id="search-input" type="text" autocomplete="off" class="font-search placeholder-color-search text-transition-none bg-transparent outline-none" />
             </div>
             <div id="assistant-container" class="font-search corner-style hidden w-full grid-flow-row gap-2 p-2 text-base md:text-2xl"></div>
             <div id="bookmarks-container"></div>
