--- a/src/options.html
+++ b/src/options.html
@@ -656,16 +656,24 @@
                 <input id="search-select-icon-color-input" type="text" autocomplete="off" class="bg-transparent text-white placeholder-neutral-500 outline-none" placeholder="input color..." />
               </div>
             </div>
-            <div class="grid w-full grid-cols-[max-content_auto] place-items-center">
-              <p class="text-base text-white">search.recognizeLinks</p>
-              <div class="ml-auto">
-                <label class="relative inline-flex cursor-pointer items-center">
-                  <input id="search-recognize-links-checkbox" type="checkbox" value="" class="peer sr-only" />
-                  <div
-                    class="peer h-6 w-11 rounded-full bg-neutral-800 outline-none after:absolute after:left-[3px] after:top-[3px] after:aspect-square after:h-[1.15rem] after:rounded-full after:border-none after:bg-neutral-700 after:transition-all after:content-[''] peer-checked:bg-emerald-500 peer-checked:after:translate-x-full peer-checked:after:bg-white"
-                  ></div>
-                </label>
+            <div class="grid gap-2">
+              <div class="grid w-full grid-cols-[max-content_auto] place-items-center">
+                <p class="text-base text-white">search.recognizeLinks</p>
+
+                <div class="ml-auto">
+                  <label class="relative inline-flex cursor-pointer items-center">
+                    <input id="search-recognize-links-checkbox" type="checkbox" value="" class="peer sr-only" />
+                    <div
+                      class="peer h-6 w-11 rounded-full bg-neutral-800 outline-none after:absolute after:left-[3px] after:top-[3px] after:aspect-square after:h-[1.15rem] after:rounded-full after:border-none after:bg-neutral-700 after:transition-all after:content-[''] peer-checked:bg-emerald-500 peer-checked:after:translate-x-full peer-checked:after:bg-white"
+                    ></div>
+                  </label>
+                </div>
               </div>
+              <p class="text-base text-neutral-500">
+                automatically detects links in search results and opens them directly instead of running a search
+                <br /><br />
+                e.g., typing `example.com` navigates directly to https://example.com instead of performing a search
+              </p>
             </div>
             <div id="search-recognize-links-section" class="grid gap-2">
               <div class="grid gap-2">
