--- a/src/options.html
+++ b/src/options.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/icons/remixicon/remixicon.css" />
     <link rel="stylesheet" href="options/styles/index.css" />
     <link rel="stylesheet" href="shared/sonner.css" />
+    <link rel="stylesheet" href="shared/tippy.css" />
     <script src="options/scripts/init.ts" type="module" defer></script>
     <script src="options/scripts/utils/sonner.ts" type="module" defer></script>
     <link rel="icon" href="assets/icon.svg" type="image/x-icon" />
